--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "duckfactory",
   "version": "0.0.1",
   "description": "Factory for creating redux ducks",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile": "rimraf lib/* && babel src -d lib",
+    "prepublish": "npm run compile"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,15 @@
   "bugs": {
     "url": "https://github.com/espen42/duckfactory/issues"
   },
-  "homepage": "https://github.com/espen42/duckfactory#readme"
+  "homepage": "https://github.com/espen42/duckfactory#readme",
+  "dependencies": {
+    "babel-runtime": "^6.23.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.23.0",
+    "babel-core": "^6.23.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "rimraf": "^2.6.1"
+  }
 }
