--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "duckfactory",
-  "version": "0.0.1",
+  "version": "1.0.1",
   "description": "Factory for creating redux ducks",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "rimraf lib/* && babel src -d lib",
-    "prepublish": "npm run compile"
+    "prepublish": "npm run checkall && npm run compile",
+    "test": "NODE_PATH=./ mocha --compilers js:babel-core/register --require babel-polyfill \"test/**/*@(.js)\"",
+    "eslint": "eslint ./*.js src/ test/",
+    "checkall": "npm run eslint & npm run test"
   },
   "repository": {
     "type": "git",
@@ -24,8 +26,14 @@
   "devDependencies": {
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
+    "babel-eslint": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "6.20.0",
     "babel-preset-es2015": "^6.22.0",
+    "chai": "3.5.0",
+    "eslint": "3.14.0",
+    "eslint-plugin-react": "^6.10.0",
+    "mocha": "3.2.0",
     "rimraf": "^2.6.1"
   }
 }
