--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "duckfactory",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Factory for creating redux ducks",
   "main": "lib/index.js",
   "scripts": {
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/espen42/duckfactory#readme",
   "dependencies": {
+    "babel-preset-stage-0": "^6.22.0",
     "babel-runtime": "^6.23.0"
   },
   "devDependencies": {
