--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "compile": "rimraf lib/* && babel src -d lib",
     "prepublish": "npm run checkall && npm run compile",
-    "test": "NODE_PATH=./ mocha --compilers js:babel-core/register --require babel-polyfill \"test/**/*@(.js)\"",
+    "test": "NODE_PATH=./ mocha --compilers js:babel-core/register --require babel-polyfill --require test/test_helper.js \"test/**/*@(.js)\"",
     "eslint": "eslint ./*.js src/ test/",
     "checkall": "npm run eslint & npm run test"
   },
@@ -25,6 +25,7 @@
     "babel-runtime": "^6.23.0"
   },
   "devDependencies": {
+    "jsdom": "^9.11.0",
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
