--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "duckfactory",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Factory for creating redux ducks",
   "main": "lib/index.js",
   "scripts": {
@@ -22,10 +22,10 @@
   "homepage": "https://github.com/espen42/duckfactory#readme",
   "dependencies": {
     "babel-preset-stage-0": "^6.22.0",
-    "babel-runtime": "^6.23.0"
+    "babel-runtime": "^6.23.0",
+    "deep-freeze": "^0.0.1"
   },
   "devDependencies": {
-    "jsdom": "^9.11.0",
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
@@ -35,6 +35,7 @@
     "chai": "3.5.0",
     "eslint": "3.14.0",
     "eslint-plugin-react": "^6.10.0",
+    "jsdom": "^9.11.0",
     "mocha": "3.2.0",
     "rimraf": "^2.6.1"
   }
